fixed off screen menu

--- a/styles.css
+++ b/styles.css
@@ -152,27 +152,26 @@ nav ul.logo li a {
 }
 
 .off-screen-menu {
-    background-color: #464646; /* Light blue color with opacity */
+    background-color: #464646;
     height: 100vh;
     width: 100%;
     max-width: 300px;
     position: fixed;
-    top: 3.1rem;
-    right: -100%;
+    /* top: 3.1rem; */
     z-index: 1;
-
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
     font-size: 3rem;
     transition: .3s ease;
-
     overflow-y: auto;
+    right: 100%;
 }
 
 .off-screen-menu.active {
-    right: 0;
+    left: 100%;
+    transform: translateX(-100%);
 }
 
 .off-screen-content {
@@ -307,7 +306,7 @@ nav ul.logo li a {
 }
 
 /* Burger menu style for smaller screens */
-@media screen and (max-width: 1100px) {
+@media screen and (max-width: 1250px) {
     .nav {
         padding: 0.5rem 2.5rem;
     }
@@ -1289,13 +1288,15 @@ nav ul.logo li a {
     grid-template-rows: repeat(1, 1fr);
     background-color: rgba(0, 0, 0, 0.548);
     width: 80%;
+    top: 10%;
     height: auto;
     border-radius: 15px;
     border: 2.5px solid var(--black-color);
     row-gap: 10px;
-    position: relative;
+    position: absolute;
     margin-top: 2.5rem;
     margin-bottom: 2.5rem;
+    padding-bottom: 5%;
     left: 50%;
     transform: translateX(-50%);
     justify-content: center;
